[package]
name = "mehaliin"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]

[features]
default = [
    "Memory",
    "Memory_Utils",
    "Memory_Read",
    "Memory_Write",
    "Memory_Pattern_Scan",
    "Injector",
    "Injector_Utils",
    "Injector_LoadLibraryA",
]
Memory = ["Memory_Utils", "Memory_Read", "Memory_Write", "Memory_Pattern_Scan"]
Memory_Utils = []
Memory_Read = []
Memory_Write = []
Memory_Pattern_Scan = []
Injector = ["Injector_Utils", "Injector_LoadLibraryA"]
Injector_Utils = []
Injector_LoadLibraryA = []

[dependencies]
sysinfo = "0.30.5"
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
] }


[build-dependencies]
cc = "1.0.83"

[profile.test]
opt-level = 3
overflow-checks = false
lto = "thin"

[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
lto = true
panic = "abort"
